[project]
name = "my-docs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-encryptcontent-plugin>=3.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.6",
]

[project.entry-points."mkdocs.plugins"]
theorem_envs = "mkdocs_theorem_envs.plugin:TheoremPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_theorem_envs"]
